--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
+  "name": "SupplyChainSecurity",
+  "private": false,
+  "version": "1.0.0",
+  "description": "SCS Examples to be cautious of... and protected by Checkmarx for...",
+  "main": "server.js",
   "dependencies": {
-    "node-ipc": "9.2.2"
-    "ua-parser-js": "0.7.28"
+    "handlebars": "4.7.9",
+    "lodash": "4.17.11",
+    "node-ipc": "9.2.2",
+    "ua-parser-js": "0.7.28",
     "ua-parser-js": "0.7.29"
+  },
+  "scripts": {},
+  "devDependencies": {
+    "async": "^2.0.0-rc.4",
+    "grunt": "^1.0.1",
+    "qs": "6.0.0",
+    "js-yaml": "3.6.1"
   }
 }
