--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "description": "SCS Examples to be cautious of... and protected by Checkmarx for...",
   "main": "server.js",
   "dependencies": {
-	  "handlebars": "4.7.9",
-	  "lodash": "4.17.11",
-	  "node-ipc": "9.2.2",
-	  "ua-parser-js": "0.7.29",
-	  "event-pubsub": "5.0.3",
-	  "momnet": "2.29.1",
-	  "flow-dev-tools": "99.10.9",
-	  "scs": "0.0.1"
+    "moment": "2.29.1",
+    "ua-parser-js": "0.7.30",
+    "@alexmsmithca/flow-dev-tools": "0.115.0",
+    "scs": "0.0.1"
+   }
   },
   "scripts": {},
   "devDependencies": {
